JWT authentication implemented (Generation of token, Validation of token left)